BusOne/src/objects/Metadata_Translation_vod__c.object
<CustomObject>
    <description>Stores translation data. Veeva use only.</description>
    <fields>
        <fullName>External_ID_vod__c</fullName>
        <description>External ID.</description>
        <externalId>true</externalId>
        <label>External ID</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Language_vod__c</fullName>
        <description>Language of the translations</description>
        <label>Language</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Layout_Name_vod__c</fullName>
        <description>Name of the layout being represented.</description>
        <label>Layout Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Object_Name_vod__c</fullName>
        <description>Name of the object that the translations are for</description>
        <label>Object Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Parent_Definition_vod__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Lookup to Metadata Definition that this Translation object translates</description>
        <label>Parent Definition</label>
        <referenceTo>Metadata_Definition_vod__c</referenceTo>
        <relationshipLabel>Metadata Translation</relationshipLabel>
        <relationshipName>Metadata_Translation_vod</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Record_Type_vod__c</fullName>
        <description>Stores the Record Type ID of the extracted record type.</description>
        <label>Record Type</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Translation_vod__c</fullName>
        <description>Stores translated values for components of a page.</description>
        <label>Translation</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <label>Metadata Translation</label>
    <nameField>
        <displayFormat>MT-{0000000000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Metadata Translations</pluralLabel>
    <recordTypes>
        <fullName>Event_Type_vod</fullName>
        <active>true</active>
        <description>Used to store event types for integration with Vault</description>
        <label>Event_Type_vod</label>
    </recordTypes>
    <recordTypes>
        <fullName>Related_List_vod</fullName>
        <active>true</active>
        <description>Stores related list Translations</description>
        <label>Related_List_vod</label>
    </recordTypes>
    <recordTypes>
        <fullName>Section_vod</fullName>
        <active>true</active>
        <description>Stores section translations</description>
        <label>Section_vod</label>
    </recordTypes>
    <recordTypes>
        <fullName>Weblink_vod</fullName>
        <active>true</active>
        <description>Stores button translations</description>
        <label>Weblink_vod</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>